Recent changes
-194    Fixed ANSI escape codes appearing in ShelXle GUI. Improved updater.
-193    Added auto updater to DSR. Run "dsr -u" to update to the most recent version.
-192    Fixed strange characters in fragment list in Linux and other Small fixes.
-191    Prevent ** NEGATIVE OCCUPANCY FOR ATOM XX  ** warning in case of wrong 
        free variable values before fit. Added Isopropanole. Optimized examples.
        Updated user manual. Fixed minor problem in case no shelxl executable is
        found during fit in ShelXle.
-190    Fixed TypeError when using split and cf6.
-189    Improved GRADE import. Fixed bug regarding calculated FLAT restraints.
-188    Fixed bug that produces  "dsr: error: unrecognized arguments: [...]" if
        SHELXL was located in a directory containing space characters.
        Fixed bug where "FVAR 1" ended up as 1000000.
        Added all natural amino acids. Improved FLAT restraints. 
-187    No CF3 groups inside of residues allowed any more. Fixed exception when 
        DSR tries to delete a file.
        MAC OS: Fixed broken startup script.
-186    Fixed bug in sorting of names list. Made outlier test for SADI a bit weaker.
        Added Fluorobenzene. User manual update.
-185    Added COD to database. Fixed bug where cf3fit could delete the first atom
        in the res file (Thanks to C. Maichle-Moessmer for reporting). Fixed
        damaging of L.S. command with more than one parameter.
-184    PMDETA and DMAP fragments added, Fixed bug where cf3fit could not handle 
        isotropic atoms (Thanks to C. Maichle-Moessmer for reporting).
-183    New fragments, improved handling of relative paths for external restraints,
        restore refinement cycles after DSR run. 
-182    IMPORTANT! The default path for the user database is now the users home
        directory! For example /home/username/dsr_user_db.txt in Linux and 
        C:/users/Username in windows Vista and later. The DSR_DB_DIr environment