@@ -1,4 +1,6 @@
 Recent changes
+-195    Slightly speed improvement. Cleaner code (needs more). Fixed too optimistic
+        replace mode in 194. External restraints shouuld work again.
 -194    Fixed ANSI escape codes appearing in ShelXle GUI. Improved updater.
 -193    Added auto updater to DSR. Run "dsr -u" to update to the most recent version.
 -192    Fixed strange characters in fragment list in Linux and other Small fixes.
